# nobara-device-manager

./: .gitmodules  Cargo.toml  Makefile  main.sh
.github/workflows/: build-canaryi386.yml  build-nesti386.yml  release-canaryi386.yml  release-nesti386.yml
data/: com.github.nobara-project-linux.nobaradevicemanager.desktop  com.github.nobara-project-linux.nobaradevicemanager.gschema.xml  com.github.nobara-project.nobaradevicemanager.desktop  com.github.nobara-project.nobaradevicemanager.gschema.xml  com.github.nobara-project.nobaradrivermanager.desktop  com.github.nobara-project.nobaradrivermanager.gschema.xml  com.github.pikaos-linux.pikadevicemanager.desktop  com.github.pikaos-linux.pikadevicemanager.gschema.xml
debian/: changelog  control  postinst  rules
locales/: ca_ES.json  cs_CZ.json  en_US.json  eo_XX.json  es_ES.json  et_EE.json  fr_FR.json  hu_HU.json  id_ID.json  it_IT.json  ja_JP.json  kab.json  nb_NO.json  nl_NL.json  pt_BR.json  ru_RU.json  uk_UA.json  zh_Hans.json
locales2/: en_US.json  hu_HU.json  ro_RO.json  uk_UA.json
src/: config.rs  main.rs  style.css
src/build_ui/: mod.rs
src/build_ui/color_badge/: imp.rs  mod.rs
src/build_ui/colored_circle/: imp.rs  mod.rs
src/build_ui/content/: all_profile_dialog.rs  internet_check.rs  main_content_content.rs  main_content_sidebar.rs  mod.rs
src/build_ui/content/bt/: mod.rs
src/build_ui/content/dmi/: mod.rs
src/build_ui/content/pci/: mod.rs
src/build_ui/content/usb/: mod.rs
src/build_ui/loading/: mod.rs
src/cfhdb/: bt.rs  dmi.rs  mod.rs  pci.rs  usb.rs
src/pikd/: mod.rs
