[package]
name = "pika-device-manager"
version = "0.1.1"
edition = "2021"

[dependencies]
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_6"] }
async-channel = "2.3.1"
cfhdb = { git = "https://github.com/CosmicFusion/cfhdb", version = "0.1.2" }
chrono = "0.4.41"
duct = "0.13.7"
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_16"] }
lazy_static = "1.5.0"
os_pipe = "1.2.1"
rayon = "1.8.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
rust-i18n = "3.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.16.2"
users = "0.11.0"
circularprogressbar-rs = { git = "https://github.com/CosmicFusion/circularprogressbar-rs", version = "0.1.1" }

